--- a/main.css
+++ b/main.css
@@ -1,10 +1,12 @@
 :root {
   --clr-dark: rgb(13, 17, 19);
   --clr-light: #fff;
-  --clr-accent: rbb(222, 52, 0);
-  --clr-accent-dark: rbb(163, 38, 0);
-  --clr-secondary: rbb(0, 62, 163);
+  --clr-accent: rgb(222, 52, 0);
+  --clr-accent-dark: rgb(163, 38, 0);
+  --clr-secondary: rgb(3, 90, 219);
   --br: 0.5em;
+  --transition: transform 200ms cubic-bezier(.21, 1.00, .81, 1.00)
+;
 }
 
 body {
@@ -28,15 +30,27 @@ img {
   max-width: 100%;
 }
 
+.btn {
+  cursor: pointer;
+  border: 0;
+  background: var(--clr-secondary);
+  border-radius: 100vw;
+  color: var(--clr-light);
+  font-weight: bold;
+  padding: .5em 1.5em;
+}
+
 .game {
   position: relative;
   max-width: 12.5rem;
+  cursor: pointer;
 }
 
 .streamers {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  text-align: center;
 }
 
 .streamers img {
@@ -49,12 +63,20 @@ img {
   position: absolute;
   top: 0;
   right: 1em;
+  z-index: 1000;
   font-weight: bold;
   font-size: 1.1rem;
   padding: .5em .5em .75em;
   background: rgba(0, 0, 0, 0.65);
   -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 100%, 50% 85%, 0% 100%);
           clip-path: polygon(0% 0%, 100% 0, 100% 100%, 50% 85%, 0% 100%);
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.front {
+  -webkit-transition: 250ms;
+  transition: 250ms;
 }
 
 .front .thumbnail {
@@ -93,6 +115,154 @@ img {
 }
 
 .back {
-  display: none;
+  opacity: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1em;
+  -webkit-transform: translateY(35%);
+          transform: translateY(35%);
+}
+
+.back .streaming-info {
+  -webkit-columns: 2;
+          columns: 2;
+  -webkit-column-rule: 2px solid rgba(255, 255, 255, 0.25);
+          column-rule: 2px solid rgba(255, 255, 255, 0.25);
+}
+
+.back .game-stat {
+  font-size: 1.125rem;
+  text-align: center;
+}
+
+.back .game-stat span {
+  font-size: .85rem;
+  display: block;
+}
+
+.background {
+  background: #282e36;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  -webkit-transform: scale(0.2, 0.9);
+          transform: scale(0.2, 0.9);
+  opacity: 0;
+  border-radius: var(--br);
+}
+
+.game:hover .rank {
+  -webkit-transform: translate(145%, -80%);
+          transform: translate(145%, -80%);
+}
+
+.game:hover .front {
+  -webkit-transform: translateY(-35%) scale(0.8);
+          transform: translateY(-35%) scale(0.8);
+}
+
+.game:hover .front .name {
+  -webkit-animation: gameName 250ms forwards;
+          animation: gameName 250ms forwards;
+}
+
+.game:hover .front .stats {
+  opacity: 0;
+}
+
+.game:hover .back {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  -webkit-transition: opacity 150ms, -webkit-transform 250ms ease;
+  transition: opacity 150ms, -webkit-transform 250ms ease;
+  transition: transform 250ms ease, opacity 150ms;
+  transition: transform 250ms ease, opacity 150ms, -webkit-transform 250ms ease;
+}
+
+.game:hover .back .streamers {
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.game:hover .back .streamer {
+  font-size: 0.9rem;
+}
+
+.game:hover .back .name {
+  font-weight: bold;
+}
+
+.game:hover .background {
+  -webkit-transition: opacity 100ms linear, -webkit-transform var(--transition);
+  transition: opacity 100ms linear, -webkit-transform var(--transition);
+  transition: transform var(--transition), opacity 100ms linear;
+  transition: transform var(--transition), opacity 100ms linear, -webkit-transform var(--transition);
+  opacity: 1;
+  -webkit-transform: scale(1.4, 1.2);
+          transform: scale(1.4, 1.2);
+}
+
+@-webkit-keyframes gameName {
+  0% {
+    text-align: left;
+    opacity: 1;
+  }
+  20% {
+    text-align: left;
+    opacity: 0;
+  }
+  40% {
+    text-align: center;
+    opacity: 0;
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  100% {
+    text-align: center;
+    opacity: 1;
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+  }
+}
+
+@keyframes gameName {
+  0% {
+    text-align: left;
+    opacity: 1;
+  }
+  20% {
+    text-align: left;
+    opacity: 0;
+  }
+  40% {
+    text-align: center;
+    opacity: 0;
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  100% {
+    text-align: center;
+    opacity: 1;
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+  }
 }
 /*# sourceMappingURL=main.css.map */
