--- a/main.scss
+++ b/main.scss
@@ -1,11 +1,13 @@
 :root {
     --clr-dark: rgb(13, 17, 19);
     --clr-light: #fff;
-    --clr-accent: rbb(222, 52, 0);
-    --clr-accent-dark: rbb(163, 38, 0);
-    --clr-secondary: rbb(0, 62, 163);
+    --clr-accent: rgb(222, 52, 0);
+    --clr-accent-dark: rgb(163, 38, 0);
+    --clr-secondary: rgb(3, 90, 219);
 
     --br: 0.5em;
+
+    --transition: transform 200ms cubic-bezier(.21, 1.00, .81, 1.00)
 }
 
 body {
@@ -28,13 +30,25 @@ img {
     max-width: 100%;
 }
 
+.btn {
+    cursor: pointer;
+    border:0;
+    background: var(--clr-secondary);
+    border-radius: 100vw;
+    color: var(--clr-light);
+    font-weight: bold;
+    padding: .5em 1.5em;
+}
+
 .game {
     position: relative;
     max-width: 12.5rem;
+    cursor: pointer;
 }
 
 .streamers {
     display: flex;
+    text-align: center;
 
     img {
         width: 2em;
@@ -47,14 +61,18 @@ img {
     position: absolute;
     top: 0;
     right:1em;
+    z-index: 1000;
     font-weight: bold;
     font-size: 1.1rem;
     padding:.5em .5em .75em;
     background: rgba(0,0,0,.65);
     clip-path: polygon(0% 0%, 100% 0, 100% 100%, 50% 85%, 0% 100%);
+    transition: var(--transition);
 }
 
 .front {
+    transition: 250ms;
+
     .thumbnail {
         border-radius: var(--br);
     }
@@ -80,10 +98,116 @@ img {
             transform: translateX(25%);
         }
     }
-
-
 }
 
 .back {
-    display: none;
+    opacity: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+    transform: translateY(35%);
+
+
+    .streaming-info {
+        columns: 2;
+        column-rule: 2px solid rgba(255, 255, 255, $alpha: 0.25);
+    }
+
+    .game-stat {
+        font-size: 1.125rem;
+        text-align: center;
+
+        span {
+            font-size: .85rem;
+            display: block;
+        }
+    }
+}
+
+.background {
+    background: rgb(40, 46, 54);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    transform: scale(.2, .9);
+    opacity: 0;
+    border-radius: var(--br);
+}
+
+.game:hover {
+    .rank {
+        transform: translate(145%, -80%);
+    }
+
+    .front {
+        transform: translateY(-35%) scale(0.8);
+
+        .name {
+            animation: gameName 250ms forwards;
+        }
+
+        .stats {
+            opacity: 0;
+        }
+    }
+
+    .back {
+        opacity: 1;
+        transform: translateY(0);
+        transition: transform 250ms ease, opacity 150ms;
+
+        .streamers {
+            width: 100%;
+            justify-content: space-between;
+        }
+
+        .streamer {
+            font-size: 0.9rem;
+        }
+
+        .name {
+            font-weight: bold;
+        }
+
+    }
+
+    .background {
+        transition: 
+            transform var(--transition),
+            opacity 100ms linear;
+        opacity: 1;
+        transform: scale(1.4, 1.2);
+    }
+}
+
+@keyframes gameName {
+    0% {
+        text-align: left;
+        opacity: 1;
+    }
+
+    20% {
+        text-align: left;
+        opacity: 0;
+    }
+
+    40% {
+        text-align: center;
+        opacity: 0;
+        transform: scale(1.2);
+    }
+
+    100% {
+        text-align: center;
+        opacity: 1;
+        transform: scale(1.3);
+    }
 }
